# assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
policies/: model-routing.policy.json
tests/: test_assistant.py
unhosted_assistant/: __init__.py  __main__.py  cli.py
unhosted_assistant/agent/: __init__.py  loop.py  router.py
unhosted_assistant/llm/: __init__.py  ollama_client.py  openai_client.py  providers.py
unhosted_assistant/skills/: __init__.py  base.py  builtin.py
